--- a/subtask-2/index.html
+++ b/subtask-2/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task-2 By Shubham</title>
+    <title>Task-2 By Priyanshi</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h3>Subtask-2 Shubham</h3>
+    <h3>Subtask-2 Priyanshi</h3>
     <div class="canvas-wrapper">
         <canvas id="board" width="500" height="500" style="border:1px solid #000000;">
         </canvas>
