--- a/Reports/shubham/Subtask-2/index.html
+++ b/Reports/shubham/Subtask-2/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Subtask</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
     <style>
     .main{
       display: flex;
@@ -21,7 +22,7 @@
       height: 500px;
       border:1px solid #000000;
       margin-top: 30px;
-      align-items: center;
+      position: relative;
 
     }
     .btn{
@@ -52,14 +53,17 @@
       box-shadow: inset 0 1px 2px 0 rgba(0,0,0,0.1);
     }
     .circle {
-      width: 82px;
-      height: 82px;
-      transition: transform .2s;
-      border-radius: 50%;
-      border: 2px solid black;
+      cursor: pointer;
     }
-    .circle:hover{
-      transform: scale(1.1);
+    .svg {
+      width: 100%;
+      height: 100%;
+    }
+
+    .path {
+      fill: none;
+      stroke: cornflowerblue;
+      stroke-width: 2;
     }
     </style>
   </head>
@@ -72,9 +76,11 @@
           <div><button class="btn" id="4" onclick="handleClick(4)">erase</button></div>
           <div><button class="btn" id="5" onclick="handleClick(5)">Label</button></div>
         </div>
-        <div id="can">
-          <canvas id="board" class="canvas" width="1000" height="500">
-          </canvas>
+        <div id="can" class="canvas">
+            <svg class="svg" id="board">
+              <svg class="svg" id="board2"></svg>
+              <!-- <path id="path1" class="path" /> -->
+            </svg>
         </div>
         </div>
   <script src="index.js"></script>
