--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -64,6 +64,16 @@
       fill: none;
       stroke: cornflowerblue;
       stroke-width: 2;
+      cursor: pointer;
+    }
+
+    .input{
+      border: solid;
+      border-width: 2px;
+    }
+
+    .inputcircle, select{
+      border: none;
     }
     </style>
   </head>
